--- a/style/style.css
+++ b/style/style.css
@@ -704,3 +704,60 @@ h3.hello span{
     height: 50px;
     padding: 0 50px;
 }
+
+/* RESPONSIVE */
+@media(max-width:1199px)
+{
+    .aside
+    {
+       left: -270px;
+    }
+    .main-content
+    {
+        padding-left: 0;
+    }
+    .about .about-content .personal-info .info-item p span
+    {
+        display: block;
+        margin-left: 0;
+    }
+}
+
+@media(max-width:991px)
+{
+    .blog .blog-item,
+    .contact .contact-info-item,
+    .portfolio .portfolio-item,
+    .service .service-item
+    {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+    .home .home-info
+    {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+
+   .home .home-img
+   {
+       display: none;
+   }
+}
+@media(max-width:767px)
+{
+   .contact .contact-form .col-6
+   .contact .contact-info-item,
+   .blog .blog-item,
+   .portfolio .portfolio-item,
+   .service .service-item,
+   .about .about-content .experience,
+   .about .about-content .education,
+   .about .about-content .skills,
+   .about .about-content .personal-info
+   {
+     flex:0 0 100%;
+     max-width: 100%;
+   }
+}
+
