--- a/style/style-switcher.css
+++ b/style/style-switcher.css
@@ -10,7 +10,13 @@
    z-index: 101;
    border-radius: 5px;
    transition: all 0.3s ease;
+   transform: translateX(100%);
 
+}
+
+.style-switcher.open
+{
+    transform: translateX(-25px);
 }
 
 .style-switcher .s-icon{
@@ -79,3 +85,4 @@
 .style-switcher .color-5{
     background: #f021b2;
 }
+
