--- a/style/style.css
+++ b/style/style.css
@@ -605,7 +605,7 @@ h3.hello span{
 }
 .portfolio .portfolio-item-inner .portfolio-img img{
     width: 100%;
-   
+   height: 300px;
     display: block;
 }
 
